--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
-MONGO_URL = mongodb+srv://admin:admin@cluster0.mgwuckx.mongodb.net/blog?retryWrites=true&w=majority
+# MONGO_URL = mongodb+srv://admin:admin@cluster0.mgwuckx.mongodb.net/blog?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://admin:microblogging@cluster0.7qp2jqk.mongodb.net/?retryWrites=true&w=majority
